--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "implementação do https://www.tabnews.com.br para o https://curso.dev",
   "main": "index.js",
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run services:up && next dev",
+    "services:up": "docker compose -f infra/compose.yaml up -d",
+    "services:stop": "docker compose -f infra/compose.yaml stop",
+    "services:down": "docker compose -f infra/compose.yaml down",
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "lint:watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
@@ -15,7 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "next": "^13.1.6",
-    "pg": "^8.11.3",
+    "": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
