--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
     "lint:check": "prettier --check .",
     "lint:fix": "prettier --write .",
     "lint:watch": "onchange \"**/*\" -- prettier --write --ignore-unknown {{changed}}",
-    "test": "jest",
-    "test:watch": "jest --watchAll",
-    "migration:create": "node-pg-migrate -m infra/migrations create ",
+    "test": "jest --runInBand",
+    "test:watch": "jest --watchAll --runInBand",
+    "migration:create": "node-pg-migrate --migrations-dir infra/migrations create ",
     "migration:up": "node-pg-migrate -m infra/migrations --envPath .env.development up"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.4",
+    "dotenv-expand": "^11.0.6",
     "next": "^13.1.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
